welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:3: error: value à is not a member of Int
	for(i <- 0 à 1) {
                   ^